Wrap-and-sort control file

--- a/debian/control
+++ b/debian/control
@@ -7,9 +7,126 @@ Standards-Version: 3.7.2
 
 Package: netrunner-desktop
 Architecture: all
-Recommends: netrunner-system, netrunner-artwork, netrunner-artwork-backgrounds, netrunner-artwork-icons, netrunner-artwork-firefox, netrunner-artwork-thunderbird, netrunner-default-settings, plymouth-theme-netrunner-logo, netrunner-systemsettings-settings, kio-sysinfo, base-files, flashplugin-nonfree, cheese, vlc, gstreamer1.0-plugins-bad, gstreamer1.0-plugins-ugly, gtk2-engines-oxygen, gtk2-engines-qtcurve, gtk3-engines-oxygen, handbrake, k3b, linux-firmware, p7zip-full, phonon-backend-gstreamer, pidgin, pulseaudio, qtcore4-l10n, qtcurve-i18n, radiotray, rar, skanlite, unrar, virtualbox-guest-dkms, wine, winetricks, yakuake, burgerspace, gnome-chess, frozen-bubble, gltron, kbreakout, kdiamond, kmahjongg, kmines, kpat, ktron, playonlinux, gimp, karbon, krita, skanlite, kde-telepathy-contact-list, kontact, marble, transmission-qt, gmusicbrowser, kdenlive, pavucontrol, libreoffice, libreoffice-gtk, libreoffice-style-oxygen, gnome-disk-utility, partitionmanager, synaptic, virtualbox, baloo-kf5, breeze, kde-cli-tools, khelpcenter, khotkeys, kinfocenter, kio, kio-extras, kmenuedit, ksysguard, kwin, kwrited, powerdevil, systemsettings, kde-gtk-config, kde-config-gtk-style-preview, kde-config-touchpad, ksshaskpass, bluedevil, plasma-widgets-addons, kwin-addons, plasma-dataengines-addons, plasma-runners-addons, plasma-widget-kimpanel, kscreen, milou, plasma-nm, kde-config-sddm, user-manager, dolphin, konsole, gwenview, ark, okular, ksnapshot, okular-extra-backends, kate, print-manager, about-distro, kio-mtp, qapt-deb-installer, xdg-user-dirs, sddm-theme-maui, kdenetwork-filesharing, kdesudo, plasma-widget-message-indicator
-Depends: xorg, xserver-xorg, xserver-xorg-video-all, plasma-desktop, plasma-framework, sddm, console-setup, kbd, console-data
-Conflicts: plasma-netbook, kubuntu-desktop
-Replaces: plasma-netbook, kubuntu-desktop
+Recommends: about-distro,
+            ark,
+            baloo-kf5,
+            base-files,
+            bluedevil,
+            breeze,
+            burgerspace,
+            cheese,
+            dolphin,
+            flashplugin-nonfree,
+            frozen-bubble,
+            gimp,
+            gltron,
+            gmusicbrowser,
+            gnome-chess,
+            gnome-disk-utility,
+            gstreamer1.0-plugins-bad,
+            gstreamer1.0-plugins-ugly,
+            gtk2-engines-oxygen,
+            gtk2-engines-qtcurve,
+            gtk3-engines-oxygen,
+            gwenview,
+            handbrake,
+            k3b,
+            karbon,
+            kate,
+            kbreakout,
+            kde-cli-tools,
+            kde-config-gtk-style-preview,
+            kde-config-sddm,
+            kde-config-touchpad,
+            kde-gtk-config,
+            kde-telepathy-contact-list,
+            kdenetwork-filesharing,
+            kdenlive,
+            kdesudo,
+            kdiamond,
+            khelpcenter,
+            khotkeys,
+            kinfocenter,
+            kio,
+            kio-extras,
+            kio-mtp,
+            kio-sysinfo,
+            kmahjongg,
+            kmenuedit,
+            kmines,
+            konsole,
+            kontact,
+            kpat,
+            krita,
+            kscreen,
+            ksnapshot,
+            ksshaskpass,
+            ksysguard,
+            ktron,
+            kwin,
+            kwin-addons,
+            kwrited,
+            libreoffice,
+            libreoffice-gtk,
+            libreoffice-style-oxygen,
+            linux-firmware,
+            marble,
+            milou,
+            netrunner-artwork,
+            netrunner-artwork-backgrounds,
+            netrunner-artwork-firefox,
+            netrunner-artwork-icons,
+            netrunner-artwork-thunderbird,
+            netrunner-default-settings,
+            netrunner-system,
+            netrunner-systemsettings-settings,
+            okular,
+            okular-extra-backends,
+            p7zip-full,
+            partitionmanager,
+            pavucontrol,
+            phonon-backend-gstreamer,
+            pidgin,
+            plasma-dataengines-addons,
+            plasma-nm,
+            plasma-runners-addons,
+            plasma-widget-kimpanel,
+            plasma-widget-message-indicator,
+            plasma-widgets-addons,
+            playonlinux,
+            plymouth-theme-netrunner-logo,
+            powerdevil,
+            print-manager,
+            pulseaudio,
+            qapt-deb-installer,
+            qtcore4-l10n,
+            qtcurve-i18n,
+            radiotray,
+            rar,
+            sddm-theme-maui,
+            skanlite,
+            synaptic,
+            systemsettings,
+            transmission-qt,
+            unrar,
+            user-manager,
+            virtualbox,
+            virtualbox-guest-dkms,
+            vlc,
+            wine,
+            winetricks,
+            xdg-user-dirs,
+            yakuake
+Depends: console-data,
+         console-setup,
+         kbd,
+         plasma-desktop,
+         plasma-framework,
+         sddm,
+         xorg,
+         xserver-xorg,
+         xserver-xorg-video-all
+Conflicts: kubuntu-desktop, plasma-netbook
+Replaces: kubuntu-desktop, plasma-netbook
 Description: Meta package for the Netrunner desktop environment
    Meta package for the Netrunner desktop environment
