Added konqueror and dolphin to recommends

--- a/debian/control
+++ b/debian/control
@@ -53,6 +53,7 @@ Recommends: about-distro,
             kmahjongg,
             kmenuedit,
             kmines,
+            konqueror,
             konsole,
             kontact,
             kpat,
