Added kde-style-oxygen-qt4 to recommends

--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,7 @@ Recommends: about-distro,
             kde-config-gtk-style-preview,
             kde-config-sddm,
             kde-gtk-config,
+            kde-style-oxygen-qt4,
             kde-telepathy-contact-list,
             kdenetwork-filesharing,
             kdenlive,
