Added expanding-icons-taskmanager to recommends

--- a/debian/control
+++ b/debian/control
@@ -16,6 +16,7 @@ Recommends: about-distro,
             burgerspace,
             cheese,
             dolphin,
+            expanding-icons-taskmanager,
             flashplugin-nonfree,
             frozen-bubble,
             gimp,
