Added vokoscreen to recommends

--- a/debian/control
+++ b/debian/control
@@ -115,6 +115,7 @@ Recommends: about-distro,
             virtualbox,
             virtualbox-guest-dkms,
             vlc,
+            vokoscreen,
             wine,
             winetricks,
             xdg-user-dirs,
