Added kwin to depends

--- a/debian/control
+++ b/debian/control
@@ -123,6 +123,7 @@ Recommends: about-distro,
 Depends: console-data,
          console-setup,
          kbd,
+         kwin,
          plasma-desktop,
          plasma-framework,
          sddm,
