--- a/debian/control
+++ b/debian/control
@@ -63,6 +63,7 @@ Recommends: about-distro,
             kscreen,
             ksnapshot,
             ksshaskpass,
+            ksuperkey,
             ksysguard,
             ktron,
             kwin,
