Add plasma-volume-control & samba-mounter to recommends

--- a/debian/control
+++ b/debian/control
@@ -93,6 +93,7 @@ Recommends: about-distro,
             plasma-dataengines-addons,
             plasma-nm,
             plasma-runners-addons,
+            plasma-volume-control,
             plasma-widget-kimpanel,
             plasma-widget-message-indicator,
             plasma-widgets-addons,
@@ -106,6 +107,7 @@ Recommends: about-distro,
             qtcurve-i18n,
             radiotray,
             rar,
+            samba-mounter,
             sddm-theme-maui,
             skanlite,
             synaptic,
