Added firefox-plasma and thunderbird-plasma to recommends Added kmix, oxygen window decoration & apt-xapian-index to recommends

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,8 @@ Standards-Version: 3.7.2
 Package: netrunner-desktop
 Architecture: all
 Recommends: about-distro,
+            apt-xapian-index.
+            firefox-plasma,
             ark,
             baloo-kf5,
             base-files (>= 9),
@@ -55,6 +57,7 @@ Recommends: about-distro,
             kmahjongg,
             kmenuedit,
             kmines,
+            kmix,
             konqueror,
             konsole,
             kontact,
@@ -68,6 +71,7 @@ Recommends: about-distro,
             ktron,
             kwin,
             kwin-addons,
+            kwin-decoration-oxygen,
             kwrited,
             libreoffice,
             libreoffice-gtk,
@@ -112,6 +116,7 @@ Recommends: about-distro,
             skanlite,
             synaptic,
             systemsettings,
+            thunderbird-plasma,
             transmission-qt,
             unrar,
             user-manager,
