Added phonon4qt5 backends + ffmpegthumbnailer to recommends

--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,6 @@ Package: netrunner-desktop
 Architecture: all
 Recommends: about-distro,
             apt-xapian-index,
-            firefox-plasma,
             ark,
             baloo-kf5,
             base-files (>= 9),
@@ -19,6 +18,8 @@ Recommends: about-distro,
             cheese,
             dolphin,
             expanding-icons-taskmanager,
+            ffmpegthumbnailer,
+            firefox-plasma,
             flashplugin-nonfree,
             frozen-bubble,
             gimp,
@@ -93,6 +94,8 @@ Recommends: about-distro,
             partitionmanager,
             pavucontrol,
             phonon-backend-gstreamer,
+            phonon4qt5-backend-gstreamer,
+            phonon4qt5-backend-vlc,
             pidgin,
             plasma-dataengines-addons,
             plasma-nm,
