Added sni-qt to recommends

--- a/debian/control
+++ b/debian/control
@@ -119,6 +119,7 @@ Recommends: about-distro,
             samba-mounter,
             sddm-theme-maui,
             skanlite,
+            sni-qt,
             synaptic,
             systemsettings,
             thunderbird-plasma,
