Added libappindicator for gtk2&3 tray icons

--- a/debian/control
+++ b/debian/control
@@ -76,6 +76,8 @@ Recommends: about-distro,
             kwin-addons,
             kwin-decoration-oxygen,
             kwrited,
+            libappindicator1,
+            libappindicator3-1,
             libreoffice,
             libreoffice-gtk,
             libreoffice-style-oxygen,
