Added sni-qt:i386 to recommends

--- a/debian/control
+++ b/debian/control
@@ -122,6 +122,7 @@ Recommends: about-distro,
             sddm-theme-maui,
             skanlite,
             sni-qt,
+            sni-qt:i386,
             synaptic,
             systemsettings,
             thunderbird-plasma,
