Added steam-launcher to recommends

--- a/debian/control
+++ b/debian/control
@@ -123,6 +123,7 @@ Recommends: about-distro,
             skanlite,
             sni-qt,
             sni-qt:i386,
+            steam-launcher,
             synaptic,
             systemsettings,
             thunderbird-plasma,
