Added firmware-linux-nonfree to recommends

--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Recommends: about-distro,
             expanding-icons-taskmanager,
             ffmpegthumbnailer,
             firefox-plasma,
+            firmware-linux-nonfree,
             flashplugin-nonfree,
             frozen-bubble,
             gimp,
