Added kffmpegthumbnailer & rootactions-servicemenu to recommends

--- a/debian/control
+++ b/debian/control
@@ -51,6 +51,7 @@ Recommends: about-distro,
             kdenlive,
             kdesudo,
             kdiamond,
+            kffmpegthumbnailer,
             khelpcenter,
             khotkeys,
             kinfocenter,
@@ -119,6 +120,7 @@ Recommends: about-distro,
             qtcurve-i18n,
             radiotray,
             rar,
+            rootactions-servicemenu,
             samba-mounter,
             sddm-theme-maui,
             skanlite,
