Support radiotray python-appindicator and gmusicbrowser appindicator-perl icons

--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Recommends: about-distro,
             gtk3-engines-oxygen,
             gwenview,
             handbrake,
+            icedtea-7-plugin,
             k3b,
             karbon,
             kate,
@@ -80,6 +81,8 @@ Recommends: about-distro,
             kwrited,
             libappindicator1,
             libappindicator3-1,
+            libgtk2-appindicator-perl,
+            libqt5websockets5,
             libreoffice,
             libreoffice-gtk,
             libreoffice-style-oxygen,
@@ -115,6 +118,7 @@ Recommends: about-distro,
             powerdevil,
             print-manager,
             pulseaudio,
+            python-appindicator,
             qapt-deb-installer,
             qtcore4-l10n,
             qtcurve-i18n,
