Add additional packages

--- a/debian/control
+++ b/debian/control
@@ -18,6 +18,7 @@ Recommends: about-distro,
             burgerspace,
             cheese,
             command-not-found,
+            dnsutils,
             dolphin,
             expanding-icons-taskmanager,
             ffmpegthumbnailer,
@@ -30,6 +31,7 @@ Recommends: about-distro,
             gmusicbrowser,
             gnome-chess,
             gnome-disk-utility,
+            gparted,
             gstreamer1.0-plugins-bad,
             gstreamer1.0-plugins-ugly,
             gtk2-engines-oxygen,
@@ -38,6 +40,7 @@ Recommends: about-distro,
             gwenview,
             handbrake,
             icedtea-7-plugin,
+            inxi,
             k3b,
             karbon,
             kate,
@@ -68,6 +71,7 @@ Recommends: about-distro,
             konsole,
             kontact,
             kpat,
+            krfb,
             krita,
             kscreen,
             ksnapshot,
