Add the netrunner-arm package

--- a/debian/control
+++ b/debian/control
@@ -18,7 +18,6 @@ Recommends: about-distro,
             burgerspace,
             cheese,
             command-not-found,
-            dnsutils,
             dolphin,
             expanding-icons-taskmanager,
             ffmpegthumbnailer,
@@ -163,3 +162,160 @@ Conflicts: kubuntu-desktop, plasma-netbook
 Replaces: kubuntu-desktop, plasma-netbook
 Description: Meta package for the Netrunner desktop environment
    Meta package for the Netrunner desktop environment
+
+Package: netrunner-arm
+Architecture: all
+Recommends: about-distro,
+            alsa-utils,
+            apt-xapian-index,
+            ark,
+            base-files (>= 9),
+            bluedevil,
+            breeze,
+            burgerspace,
+            cheese,
+            command-not-found,
+            dnsutils,
+            dolphin,
+            expanding-icons-taskmanager,
+            ffmpegthumbnailer,
+            firefox-plasma,
+            firmware-linux-nonfree,
+            flashplugin-nonfree,
+            frozen-bubble,
+            gimp,
+            gltron,
+            gmusicbrowser,
+            gnome-chess,
+            gnome-disk-utility,
+            gparted,
+            gstreamer1.0-plugins-bad,
+            gstreamer1.0-plugins-ugly,
+            gtk2-engines-oxygen,
+            gtk2-engines-qtcurve,
+            gtk3-engines-oxygen,
+            gwenview,
+            handbrake,
+            icedtea-7-plugin,
+            inxi,
+            k3b,
+            karbon,
+            kate,
+            kbreakout,
+            kde-cli-tools,
+            kde-config-gtk-style-preview,
+            kde-config-sddm,
+            kde-gtk-config,
+            kde-style-oxygen-qt4,
+            kdenetwork-filesharing,
+            kdenlive,
+            kdesudo,
+            kdiamond,
+            kffmpegthumbnailer,
+            khelpcenter,
+            khotkeys,
+            kinfocenter,
+            kio,
+            kio-extras,
+            kio-mtp,
+            kio-sysinfo,
+            kmahjongg,
+            kmenuedit,
+            kmines,
+            kmix,
+            konqueror,
+            konsole,
+            kontact,
+            kpat,
+            krfb,
+            krita,
+            kscreen,
+            ksnapshot,
+            ksshaskpass,
+            ksuperkey,
+            ksysguard,
+            ktron,
+            kwin,
+            kwin-addons,
+            kwin-decoration-oxygen,
+            kwrited,
+            libappindicator1,
+            libappindicator3-1,
+            libgtk2-appindicator-perl,
+            libqt5websockets5,
+            libreoffice,
+            libreoffice-gtk,
+            libreoffice-style-oxygen,
+            linux-firmware,
+            marble,
+            milou,
+            netrunner-artwork,
+            netrunner-artwork-backgrounds,
+            netrunner-artwork-firefox,
+            netrunner-artwork-icons,
+            netrunner-artwork-thunderbird,
+            netrunner-default-settings,
+            netrunner-system,
+            netrunner-systemsettings-settings,
+            okular,
+            okular-extra-backends,
+            p7zip-full,
+            partitionmanager,
+            pavucontrol,
+            phonon-backend-gstreamer,
+            phonon4qt5-backend-gstreamer,
+            phonon4qt5-backend-vlc,
+            pidgin,
+            plasma-dataengines-addons,
+            plasma-nm,
+            plasma-runners-addons,
+            plasma-volume-control,
+            plasma-widget-kimpanel,
+            plasma-widget-message-indicator,
+            plasma-widgets-addons,
+            playonlinux,
+            plymouth-theme-netrunner-logo,
+            powerdevil,
+            print-manager,
+            pulseaudio,
+            python-appindicator,
+            qapt-deb-installer,
+            qtcore4-l10n,
+            qtcurve-i18n,
+            radiotray,
+            rar,
+            rootactions-servicemenu,
+            samba-mounter,
+            sddm-theme-maui,
+            skanlite,
+            sni-qt,
+            sni-qt:i386,
+            steam-launcher,
+            synaptic,
+            systemsettings,
+            thunderbird-plasma,
+            transmission-qt,
+            unrar,
+            user-manager,
+            virtualbox,
+            virtualbox-guest-dkms,
+            vlc,
+            vokoscreen,
+            wine,
+            winetricks,
+            xdg-user-dirs,
+            yakuake
+Depends: console-data,
+         console-setup,
+         kbd,
+         kwin,
+         plasma-desktop,
+         plasma-framework,
+         sddm,
+         xorg,
+         xserver-xorg,
+         xserver-xorg-video-all
+Conflicts: kubuntu-desktop, plasma-netbook
+Replaces: kubuntu-desktop, plasma-netbook
+Description: Meta package for the Netrunner ARM environment
+   Meta package for the Netrunner ARM environment
