Make sure we recommend mintupdate

--- a/debian/control
+++ b/debian/control
@@ -91,6 +91,7 @@ Recommends: about-distro,
             linux-firmware,
             marble,
             milou,
+            mintupdate,
             netrunner-artwork,
             netrunner-artwork-backgrounds,
             netrunner-artwork-firefox,
@@ -245,6 +246,7 @@ Recommends: about-distro,
             libreoffice-style-oxygen,
             marble,
             milou,
+            mintupdate,
             netrunner-artwork,
             netrunner-artwork-backgrounds,
             netrunner-artwork-firefox,
