Depend on oracle-java8-installer, required for yacy

--- a/debian/control
+++ b/debian/control
@@ -317,6 +317,11 @@ Description: Meta package for the Netrunner ARM environment
 
 Package: netrunner-cloud-arm
 Architecture: all
-Depends: nano, netrunner-arm, owncloud, yacy
+Depends: nano,
+         netrunner-arm,
+         oracle-java8-installer,
+         oracle-java8-set-default,
+         owncloud,
+         yacy
 Description: Meta package for the Netrunner Cloud ARM environment
    Meta package for the Netrunner Cloud ARM environment
