steam-launcher is now steam

--- a/debian/control
+++ b/debian/control
@@ -134,7 +134,7 @@ Recommends: about-distro,
             skanlite,
             sni-qt,
             sni-qt:i386,
-            steam-launcher,
+            steam,
             synaptic,
             systemsettings,
             thunderbird-plasma,
