--- a/debian/control
+++ b/debian/control
@@ -257,6 +257,7 @@ Recommends: about-distro,
             netrunner-default-settings,
             netrunner-system,
             netrunner-systemsettings-settings,
+            novnc,
             okular,
             okular-extra-backends,
             p7zip-full,
