Changed kwin to kwin-x11

--- a/debian/control
+++ b/debian/control
@@ -75,7 +75,7 @@ Recommends: about-distro,
             ksuperkey,
             ksysguard,
             ktron,
-            kwin,
+            kwin-x11,
             kwin-addons,
             kwin-decoration-oxygen,
             kwrited,
