Revert "Removed okular from recommends"
This reverts commit e41dd3db89424a990738a91b427e6be0a8edf8a7.

--- a/debian/control
+++ b/debian/control
@@ -92,6 +92,8 @@ Recommends: about-distro,
             netrunner-artwork,
             netrunner-default-settings,
             netrunner-systemsettings-settings,
+            okular,
+            okular-extra-backends,
             p7zip-full,
             partitionmanager,
             pavucontrol,
@@ -246,6 +248,8 @@ Recommends: about-distro,
             netrunner-system,
             netrunner-systemsettings-settings,
             novnc,
+            okular,
+            okular-extra-backends,
             p7zip-full,
             partitionmanager,
             pavucontrol,
