--- a/debian/control
+++ b/debian/control
@@ -11,6 +11,7 @@ Recommends: about-distro,
             alsa-utils,
             apt-xapian-index,
             ark,
+            audacious,
             baloo-kf5,
             base-files (>= 9),
             bluedevil,
@@ -159,6 +160,7 @@ Recommends: about-distro,
             alsa-utils,
             apt-xapian-index,
             ark,
+            audacious,
             base-files (>= 9),
             bluedevil,
             breeze,
