--- a/debian/control
+++ b/debian/control
@@ -44,6 +44,7 @@ Recommends: about-distro,
             karbon,
             kate,
             kbreakout,
+            kcm-about-extended,
             kde-cli-tools,
             kde-config-gtk-style-preview,
             kde-config-sddm,
@@ -192,6 +193,7 @@ Recommends: about-distro,
             karbon,
             kate,
             kbreakout,
+            kcm-about-extended,
             kde-cli-tools,
             kde-config-gtk-style-preview,
             kde-config-sddm,
