--- a/debian/control
+++ b/debian/control
@@ -102,6 +102,7 @@ Recommends: about-distro,
             phonon4qt5-backend-vlc,
             pidgin,
             plasma-dataengines-addons,
+            plasma-discover,
             plasma-nm,
             plasma-runners-addons,
             plasma-volume-control,
@@ -258,6 +259,7 @@ Recommends: about-distro,
             phonon4qt5-backend-vlc,
             pidgin,
             plasma-dataengines-addons,
+            plasma-discover,
             plasma-nm,
             plasma-runners-addons,
             plasma-volume-control,
