Added kde-telepathy-contact-list to recommends

--- a/debian/control
+++ b/debian/control
@@ -50,6 +50,7 @@ Recommends: about-distro,
             kde-config-sddm,
             kde-gtk-config,
             kde-style-oxygen-qt4,
+            kde-telepathy-contact-list,
             kdenetwork-filesharing,
             kdenlive,
             kdesudo,
@@ -200,6 +201,7 @@ Recommends: about-distro,
             kde-config-sddm,
             kde-gtk-config,
             kde-style-oxygen-qt4,
+            kde-telepathy-contact-list,
             kdenetwork-filesharing,
             kdenlive,
             kdesudo,
