Removed icedtea-7-plugin Added openjdk-8-jre

--- a/debian/control
+++ b/debian/control
@@ -37,7 +37,6 @@ Recommends: about-distro,
             gtk2-engines-qtcurve,
             gtk3-engines-oxygen,
             gwenview,
-            icedtea-7-plugin,
             inxi,
             k3b,
             karbon,
@@ -94,6 +93,7 @@ Recommends: about-distro,
             netrunner-systemsettings-settings,
             okular,
             okular-extra-backends,
+            openjdk-8-jre,
             p7zip-full,
             partitionmanager,
             pavucontrol,
@@ -187,7 +187,6 @@ Recommends: about-distro,
             gtk3-engines-oxygen,
             gwenview,
             handbrake,
-            icedtea-7-plugin,
             inxi,
             k3b,
             karbon,
@@ -246,6 +245,7 @@ Recommends: about-distro,
             novnc,
             okular,
             okular-extra-backends,
+            openjdk-8-jre,
             p7zip-full,
             partitionmanager,
             pavucontrol,
