Added skype to recommends

--- a/debian/control
+++ b/debian/control
@@ -124,6 +124,7 @@ Recommends: about-distro,
             samba-mounter,
             sddm-theme-maui,
             skanlite,
+            skype,
             sni-qt,
             sni-qt:i386,
             steam,
