--- a/debian/control
+++ b/debian/control
@@ -127,7 +127,7 @@ Recommends: about-distro,
             skype,
             sni-qt,
             sni-qt:i386,
-            steam,
+            steam:i386,
             synaptic,
             systemsettings,
             thunderbird-plasma,
