Added kamoso Removed partitionmanager

--- a/debian/control
+++ b/debian/control
@@ -41,6 +41,7 @@ Recommends: about-distro,
             k3b,
             karbon,
             kate,
+            kamoso,
             kbreakout,
             kcm-about-extended,
             kde-cli-tools,
@@ -95,7 +96,6 @@ Recommends: about-distro,
             okular-extra-backends,
             openjdk-8-jre,
             p7zip-full,
-            partitionmanager,
             pavucontrol,
             phonon-backend-gstreamer,
             phonon4qt5-backend-gstreamer,
@@ -192,6 +192,7 @@ Recommends: about-distro,
             k3b,
             karbon,
             kate,
+            kamoso,
             kbreakout,
             kcm-about-extended,
             kde-cli-tools,
@@ -248,7 +249,6 @@ Recommends: about-distro,
             okular-extra-backends,
             openjdk-8-jre,
             p7zip-full,
-            partitionmanager,
             pavucontrol,
             phonon-backend-gstreamer,
             phonon4qt5-backend-gstreamer,
