Pull steam not steam:i386

--- a/debian/control
+++ b/debian/control
@@ -127,7 +127,7 @@ Recommends: about-distro,
             skype,
             sni-qt,
             sni-qt:i386,
-            steam:i386,
+            steam,
             synaptic,
             systemsettings,
             thunderbird-plasma,
