Make sure we depend on the lo from jessie-backports
LO from jessie backports depends on openjdk 8 which is what we want
on Netrunner

--- a/debian/control
+++ b/debian/control
@@ -81,9 +81,9 @@ Recommends: about-distro,
             libappindicator3-1,
             libgtk2-appindicator-perl,
             libqt5websockets5,
-            libreoffice,
-            libreoffice-gtk,
-            libreoffice-style-oxygen,
+            libreoffice (>= 1:5.1.2-3),
+            libreoffice-gtk (>= 1:5.1.2-3),
+            libreoffice-style-oxygen (>= 1:5.1.2-3),
             linux-firmware,
             marble,
             milou,
@@ -234,9 +234,9 @@ Recommends: about-distro,
             libappindicator3-1,
             libgtk2-appindicator-perl,
             libqt5websockets5,
-            libreoffice,
-            libreoffice-gtk,
-            libreoffice-style-oxygen,
+            libreoffice (>= 1:5.1.2-3),
+            libreoffice-gtk (>= 1:5.1.2-3),
+            libreoffice-style-oxygen (>= 1:5.1.2-3),
             marble,
             milou,
             mintupdate,
