--- a/debian/control
+++ b/debian/control
@@ -22,7 +22,6 @@ Recommends: about-distro,
             expanding-icons-taskmanager,
             ffmpegthumbnailer,
             firefox-plasma,
-            firmware-linux-nonfree,
             flashplugin-nonfree,
             frozen-bubble,
             gimp,
@@ -39,21 +38,21 @@ Recommends: about-distro,
             gwenview,
             inxi,
             k3b,
+            kamoso,
             karbon,
             kate,
-            kamoso,
             kbreakout,
             kcm-about-extended,
             kde-cli-tools,
             kde-config-gtk-style-preview,
             kde-config-sddm,
             kde-gtk-config,
+            kde-spectacle,
             kde-style-oxygen-qt4,
             kde-telepathy-contact-list,
             kdenetwork-filesharing,
             kdenlive,
             kdesudo,
-            kdiamond,
             kffmpegthumbnailer,
             khelpcenter,
             khotkeys,
@@ -69,7 +68,6 @@ Recommends: about-distro,
             krfb,
             krita,
             kscreen,
-            ksnapshot,
             ksshaskpass,
             ksuperkey,
             ksysguard,
@@ -109,7 +107,6 @@ Recommends: about-distro,
             plasma-widget-kimpanel,
             plasma-widget-message-indicator,
             plasma-widgets-addons,
-            playonlinux,
             plymouth-theme-netrunner-logo,
             powerdevil,
             print-manager,
@@ -118,7 +115,6 @@ Recommends: about-distro,
             qapt-deb-installer,
             qtcore4-l10n,
             qtcurve-i18n,
-            radiotray,
             rar,
             rootactions-servicemenu,
             samba-mounter,
@@ -190,9 +186,9 @@ Recommends: about-distro,
             handbrake,
             inxi,
             k3b,
+            kamoso,
             karbon,
             kate,
-            kamoso,
             kbreakout,
             kcm-about-extended,
             kde-cli-tools,
@@ -204,7 +200,6 @@ Recommends: about-distro,
             kdenetwork-filesharing,
             kdenlive,
             kdesudo,
-            kdiamond,
             kffmpegthumbnailer,
             khelpcenter,
             khotkeys,
@@ -222,7 +217,6 @@ Recommends: about-distro,
             krfb,
             krita,
             kscreen,
-            ksnapshot,
             ksshaskpass,
             ksuperkey,
             ksysguard,
@@ -262,7 +256,6 @@ Recommends: about-distro,
             plasma-widget-kimpanel,
             plasma-widget-message-indicator,
             plasma-widgets-addons,
-            playonlinux,
             plymouth-theme-netrunner-logo,
             powerdevil,
             print-manager,
@@ -271,7 +264,6 @@ Recommends: about-distro,
             qapt-deb-installer,
             qtcore4-l10n,
             qtcurve-i18n,
-            radiotray,
             rar,
             rootactions-servicemenu,
             samba-mounter,
