--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Recommends: about-distro,
             expanding-icons-taskmanager,
             ffmpegthumbnailer,
             firefox-plasma,
+            firmware-linux-nonfree,
             flashplugin-nonfree,
             frozen-bubble,
             gimp,
@@ -99,7 +100,6 @@ Recommends: about-distro,
             phonon4qt5-backend-vlc,
             pidgin,
             plasma-dataengines-addons,
-            plasma-discover,
             plasma-nm,
             plasma-runners-addons,
             plasma-volume-control,
@@ -248,7 +248,6 @@ Recommends: about-distro,
             phonon4qt5-backend-vlc,
             pidgin,
             plasma-dataengines-addons,
-            plasma-discover,
             plasma-nm,
             plasma-runners-addons,
             plasma-volume-control,
