Add handbrake to netrunner-desktop

--- a/debian/control
+++ b/debian/control
@@ -37,6 +37,7 @@ Recommends: about-distro,
             gtk2-engines-qtcurve,
             gtk3-engines-oxygen,
             gwenview,
+            handbrake,
             inxi,
             k3b,
             kamoso,
