Add kcm-plasma-services as requested

--- a/debian/control
+++ b/debian/control
@@ -45,6 +45,7 @@ Recommends: about-distro,
             kate,
             kbreakout,
             kcm-about-extended,
+            kcm-plasma-services,
             kde-cli-tools,
             kde-config-gtk-style-preview,
             kde-config-sddm,
@@ -191,6 +192,7 @@ Recommends: about-distro,
             kate,
             kbreakout,
             kcm-about-extended,
+            kcm-plasma-services,
             kde-cli-tools,
             kde-config-gtk-style-preview,
             kde-config-sddm,
