Update package list

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,8 @@ Package: netrunner-desktop
 Architecture: all
 Recommends: about-distro,
             alsa-utils,
+            android-tools-adb,
+            android-tools-fastboot,
             apt-xapian-index,
             ark,
             audacious,
@@ -26,6 +28,7 @@ Recommends: about-distro,
             flashplugin-nonfree,
             frozen-bubble,
             gimp,
+            git,
             gltron,
             gmusicbrowser,
             gnome-chess,
