--- a/debian/control
+++ b/debian/control
@@ -41,6 +41,7 @@ Recommends: about-distro,
             gtk3-engines-oxygen,
             gwenview,
             handbrake,
+            imagewriter,
             inxi,
             k3b,
             kamoso,
@@ -188,6 +189,7 @@ Recommends: about-distro,
             gtk3-engines-oxygen,
             gwenview,
             handbrake,
+            imagewriter,
             inxi,
             k3b,
             kamoso,
