Adjust package list as requested

--- a/debian/control
+++ b/debian/control
@@ -201,10 +201,10 @@ Recommends: about-distro,
             kde-config-gtk-style-preview,
             kde-config-sddm,
             kde-gtk-config,
+            kde-spectacle,
             kde-style-oxygen-qt4,
             kde-telepathy-contact-list,
             kdenetwork-filesharing,
-            kdenlive,
             kdesudo,
             kffmpegthumbnailer,
             khelpcenter,
@@ -282,7 +282,6 @@ Recommends: about-distro,
             unrar,
             user-manager,
             vlc,
-            vokoscreen,
             wine,
             winetricks,
             x11vnc,
