Added gstreamer0.10-fluendo-mp3 to make mp3 playback work in gmusicbrowser

--- a/debian/control
+++ b/debian/control
@@ -36,6 +36,7 @@ Recommends: about-distro,
             gparted,
             gstreamer1.0-plugins-bad,
             gstreamer1.0-plugins-ugly,
+            gstreamer0.10-fluendo-mp3,
             gtk2-engines-oxygen,
             gtk2-engines-qtcurve,
             gtk3-engines-oxygen,
@@ -183,6 +184,7 @@ Recommends: about-distro,
             gparted,
             gstreamer1.0-plugins-bad,
             gstreamer1.0-plugins-ugly,
+            gstreamer0.10-fluendo-mp3,
             gtk2-engines-oxygen,
             gtk2-engines-qtcurve,
             gtk3-engines-oxygen,
