Install skype on ARM too

--- a/debian/control
+++ b/debian/control
@@ -34,9 +34,9 @@ Recommends: about-distro,
             gnome-chess,
             gnome-disk-utility,
             gparted,
+            gstreamer0.10-fluendo-mp3,
             gstreamer1.0-plugins-bad,
             gstreamer1.0-plugins-ugly,
-            gstreamer0.10-fluendo-mp3,
             gtk2-engines-oxygen,
             gtk2-engines-qtcurve,
             gtk3-engines-oxygen,
@@ -182,9 +182,9 @@ Recommends: about-distro,
             gnome-chess,
             gnome-disk-utility,
             gparted,
+            gstreamer0.10-fluendo-mp3,
             gstreamer1.0-plugins-bad,
             gstreamer1.0-plugins-ugly,
-            gstreamer0.10-fluendo-mp3,
             gtk2-engines-oxygen,
             gtk2-engines-qtcurve,
             gtk3-engines-oxygen,
@@ -275,6 +275,7 @@ Recommends: about-distro,
             samba-mounter,
             sddm-theme-maui,
             skanlite,
+            skype,
             sni-qt,
             sni-qt:i386,
             synaptic,
