Make sure we set the arch as well

--- a/debian/control
+++ b/debian/control
@@ -275,7 +275,7 @@ Recommends: about-distro,
             samba-mounter,
             sddm-theme-maui,
             skanlite,
-            skype,
+            skype:amd64,
             sni-qt,
             sni-qt:i386,
             synaptic,
