--- a/debian/control
+++ b/debian/control
@@ -268,6 +268,7 @@ Recommends: about-distro,
             pulseaudio,
             python-appindicator,
             qapt-deb-installer,
+            qemu-user-static,
             qtcore4-l10n,
             qtcurve-i18n,
             rar,
