Rename to maui-desktop

--- a/debian/control
+++ b/debian/control
@@ -1,11 +1,11 @@
-Source: netrunner-desktop
+Source: maui-desktop
 Section: admin
 Priority: optional
 Maintainer: Leszek Lesner <leszek@zevenos.com>
 Build-Depends: debhelper (>= 5)
 Standards-Version: 3.7.2
 
-Package: netrunner-desktop
+Package: maui-desktop
 Architecture: all
 Recommends: about-distro,
             alsa-utils,
@@ -155,10 +155,10 @@ Depends: console-data,
          xserver-xorg-video-all
 Conflicts: kubuntu-desktop, plasma-netbook
 Replaces: kubuntu-desktop, plasma-netbook
-Description: Meta package for the Netrunner desktop environment
-   Meta package for the Netrunner desktop environment
+Description: Meta package for the Maui desktop environment
+   Meta package for the Maui desktop environment
 
-Package: netrunner-arm
+Package: maui-arm
 Architecture: all
 Recommends: about-distro,
             alsa-utils,
@@ -303,5 +303,5 @@ Depends: console-data,
          xserver-xorg-video-all
 Conflicts: kubuntu-desktop, plasma-netbook
 Replaces: kubuntu-desktop, plasma-netbook
-Description: Meta package for the Netrunner ARM environment
-   Meta package for the Netrunner ARM environment
+Description: Meta package for the Maui ARM environment
+   Meta package for the Maui ARM environment
