--- a/debian/control
+++ b/debian/control
@@ -93,9 +93,9 @@ Recommends: about-distro,
             milou,
             mintupdate,
             nano,
-            maui-artwork,
-            maui-default-settings,
-            maui-systemsettings-settings,
+            netrunner-artwork,
+            netrunner-default-settings,
+            netrunner-systemsettings-settings,
             okular,
             okular-extra-backends,
             openjdk-8-jre,
@@ -112,7 +112,7 @@ Recommends: about-distro,
             plasma-widget-kimpanel,
             plasma-widget-message-indicator,
             plasma-widgets-addons,
-            plymouth-theme-maui-logo,
+            plymouth-theme-netrunner-logo,
             powerdevil,
             print-manager,
             pulseaudio,
