Recommend maui-artwork

--- a/debian/control
+++ b/debian/control
@@ -93,9 +93,9 @@ Recommends: about-distro,
             milou,
             mintupdate,
             nano,
-            netrunner-artwork,
-            netrunner-default-settings,
-            netrunner-systemsettings-settings,
+            maui-artwork,
+            maui-default-settings,
+            default-systemsettings-settings,
             okular,
             okular-extra-backends,
             openjdk-8-jre,
